tests/type_errors/hof_nested_call_binding.nos
# expect_error: type mismatch
# HOF wrapping a nested function call through binding should be caught
wrapLambda(f) = x => f(x)
identity(f) = f
inc(x: Int) = x + 1
main() = {
  g = wrapLambda(identity(inc))
  g("hello")
}
